flux/infrastructure/3dprinting/gridspace/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridspace
  namespace: 3dprinting
spec:
  selector:
    app: gridspace
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  type: ClusterIP
